--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
         <div class="rounded-2xl overflow-visible work-card-image">
           <img
-            src="https://aicdn.picsart.com/0ba16572-c23c-4350-8241-c2291d1f7003.png"
+            src="main-hero.png"
             alt="Stimulate Project Screenshot"
             class="w-full h-60 sm:h-72 object-cover rounded-2xl shadow"/>
         </div>
@@ -226,7 +226,7 @@
     <!-- gallery -->
     <div class="bg-gray-100 rounded-2xl h-[350px] flex items-center shadow-[0_2px_20px_0_rgba(0,0,0,0.025)] overflow-x-auto scrollbar-hide">
       <div class="flex gap-6 min-w-[760px] animate-scrollLoop">
-        
+           
         <div class="flex flex-col items-center min-w-[150px] mr-3">
           <img class="w-[250px] h-[250px] rounded-xl object-cover border-4 border-white shadow-[10px_20px_8px_rgba(0,0,0,0.1)] transition-transform duration-300 ease-[cubic-bezier(.13,.8,.5,1.2)] hover:-translate-y-4 hover:scale-105 hover:-rotate-2" src="https://aicdn.picsart.com/e71a8c79-098a-4af2-adad-8f53b1b2e1b3.png" alt="Journey 1" />
           <div class="text-center text-gray-600 font-comicSans text-base mt-1">School Days🫰</div>
