--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <div>
             <span
               class="block font-extrabold text-2xl sm:text-3xl text-gray-900 font-fredoka">Booking.com</span>
-            <span class="block text-gray-500 text-base mt-1">Branding, Web design, Illustrations, Development</span>
+            <span class="block text-gray-500 text-base mt-1">Clone the UI</span>
           </div>
           <span class="text-2xl sm:text-3xl font-bold text-gray-800">→</span>
         </div>
