--- a/index.html
+++ b/index.html
@@ -22,31 +22,18 @@
 
       <!-- Desktop Nav -->
       <nav class="hidden md:flex gap-6 text-sm sm:text-base">
-        <a href="#home"
-          class="text-[#fff6d1] font-medium px-3 py-1 rounded-2xl hover:bg-[#ffe066] hover:text-[#423c29] transition"
-          >Home</a>
-        <a
-          href="#home"
-          class="text-[#fff6d1] font-medium px-3 py-1 rounded-2xl hover:bg-[#ffe066] hover:text-[#423c29] transition"
-          >About</a>
-        <a href="#projects"
-          class="text-[#fff6d1] font-medium px-3 py-1 rounded-2xl hover:bg-[#ffe066] hover:text-[#423c29] transition"
-          >Projects</a>
-          <a href="#story"
-          class="text-[#fff6d1] font-medium px-3 py-1 rounded-2xl hover:bg-[#ffe066] hover:text-[#423c29] transition"
-          >Story</a>
-        <a href="#contact"
-          class="text-[#fff6d1] font-medium px-3 py-1 rounded-2xl hover:bg-[#ffe066] hover:text-[#423c29] transition"
-          >Contact</a>
-          
+        <a href="#home" class="text-[#fff6d1] font-medium px-3 py-1 rounded-2xl hover:bg-[#ffe066] hover:text-[#423c29] transition" >Home</a>
+        <a href="#home" class="text-[#fff6d1] font-medium px-3 py-1 rounded-2xl hover:bg-[#ffe066] hover:text-[#423c29] transition" >About</a>
+        <a href="#projects" class="text-[#fff6d1] font-medium px-3 py-1 rounded-2xl hover:bg-[#ffe066] hover:text-[#423c29] transition" >Projects</a>
+        <a href="#story" class="text-[#fff6d1] font-medium px-3 py-1 rounded-2xl hover:bg-[#ffe066] hover:text-[#423c29] transition" >Story</a>
+        <a href="#contact" class="text-[#fff6d1] font-medium px-3 py-1 rounded-2xl hover:bg-[#ffe066] hover:text-[#423c29] transition" >Contact</a> 
       </nav>
 
       <!-- Mobile Menu Button -->
       <button
         id="menu-btn"
         class="md:hidden text-white text-2xl"
-        aria-label="Toggle menu">
-        ☰
+        aria-label="Toggle menu">☰
       </button>
     </div>
      <!-- Mobile Menu -->
@@ -57,12 +44,8 @@
       class="hidden md:hidden bg-[#423c29e0] rounded-b-3xl flex flex-col items-center gap-4 py-4 mt-1">
       <a href="#home" class="text-white hover:text-yellow-300 block text-base">Home</a>
       <a href="#home" class="text-white hover:text-yellow-300 block text-base">About</a>
-      <a href="#projects" class="text-white hover:text-yellow-300 block text-base"
-        >Projects</a
-      >
-      <a href="#contact" class="text-yellow-300 hover:text-yellow-500 block text-base"
-        >Contact</a
-      >
+      <a href="#projects" class="text-white hover:text-yellow-300 block text-base" >Projects</a>
+      <a href="#contact" class="text-yellow-300 hover:text-yellow-500 block text-base">Contact</a>
     </div>
   </header>
 
@@ -95,11 +78,7 @@
 
     <!-- Image Block -->
     <div class="flex-1 flex justify-center md:justify-end">
-      <img
-        src="https://aicdn.picsart.com/7ffe9782-c5d0-4909-bd0f-0e6ae535d98a.png"
-        alt="Shafi working"
-        class="w-full max-w-xs sm:max-w-md md:max-w-xl object-cover rounded-2xl"
-      />
+      <img src="https://aicdn.picsart.com/7ffe9782-c5d0-4909-bd0f-0e6ae535d98a.png" alt="Shafi working" class="w-full max-w-xs sm:max-w-md md:max-w-xl object-cover rounded-2xl"/>
     </div>
     <br> <br> <br> <br> 
   </section>
@@ -108,36 +87,31 @@
   <section id="projects"class="max-w-6xl mx-auto mt-20 px-4 sm:px-6 md:px-0 scroll-mt-16 max-w-6xl">
     <h2
       class="text-center mb-8 font-extrabold text-3xl sm:text-4xl md:text-5xl tracking-tight font-fredoka">
-      <span class="block text-base text-gray-500 font-normal"
-        >from 2020 'till today</span>
+      <span class="block text-base text-gray-500 font-normal" >from 2020 'till today</span>
       MY LATEST WORK
     </h2>
 
-    <div
-      class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-8" id="card-one">
-      <!-- Card Example -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-8" id="card-one">
+      <!-- Card -->
       <div class="bg-gray-100 rounded-3xl shadow-md hover:shadow-xl transition p-6 flex flex-col gap-4 work-card relative min-h-[180px] sm:min-h-[340px]">
         <div class="flex justify-between items-start mb-2">
           <div>
             <span class="block font-extrabold text-2xl sm:text-3xl text-gray-900 font-fredoka">W3 website clone</span>
-            <span class="block text-gray-500 text-base mt-1" >Branding, Web design, Development</span>
+            <span class="block text-gray-500 text-base mt-1" >Designed Nav bar</span>
           </div>
           <span class="text-2xl sm:text-3xl font-bold text-gray-800">→</span>
         </div>
         <div class="rounded-2xl overflow-visible work-card-image">
-          <img
-            src="https://aicdn.picsart.com/ce03d366-15bd-41d4-b2bc-926e5f1dfc8b.png"
+          <img src="https://aicdn.picsart.com/ce03d366-15bd-41d4-b2bc-926e5f1dfc8b.png"
             class="w-full h-60 sm:h-72 object-cover rounded-2xl shadow transition-transform duration-300"/>
         </div>
       </div>
 
       <!-- Card 2 -->
-      <div
-        class="bg-gray-100 rounded-3xl shadow-md hover:shadow-xl transition p-6 flex flex-col gap-4 work-card relative min-h-[180px] sm:min-h-[450px]">
+      <div class="bg-gray-100 rounded-3xl shadow-md hover:shadow-xl transition p-6 flex flex-col gap-4 work-card relative min-h-[180px] sm:min-h-[450px]">
         <div class="flex justify-between items-start mb-2">
           <div>
-            <span
-              class="block font-extrabold text-2xl sm:text-3xl text-gray-900 font-fredoka">Booking.com</span>
+            <span class="block font-extrabold text-2xl sm:text-3xl text-gray-900 font-fredoka">Booking.com</span>
             <span class="block text-gray-500 text-base mt-1">Clone the UI</span>
           </div>
           <span class="text-2xl sm:text-3xl font-bold text-gray-800">→</span>
@@ -154,8 +128,7 @@
       <div class="bg-gray-100 rounded-3xl shadow-md hover:shadow-xl transition p-6 flex flex-col gap-4 work-card relative min-h-[180px] sm:min-h-[340px]">
         <div class="flex justify-between items-start mb-2">
           <div>
-            <span
-              class="block font-extrabold text-2xl sm:text-3xl text-gray-900 font-fredoka">Portfolio</span>
+            <span class="block font-extrabold text-2xl sm:text-3xl text-gray-900 font-fredoka">Portfolio</span>
             <span class="block text-gray-500 text-base mt-1">Branding, Web design, Illustrations, Development</span>
           </div>
           <span class="text-2xl sm:text-3xl font-bold text-gray-800">→</span>
@@ -176,8 +149,7 @@
           alt="Funny Turtle Icon"
           width="80"
           class="mb-8"/>
-        <div
-          class="text-center font-extrabold text-xl sm:text-2xl tracking-tight font-fredoka">
+        <div class="text-center font-extrabold text-xl sm:text-2xl tracking-tight font-fredoka">
           <strong>NEW CASES ARE ON THE WAY,<br /> SLOWLY BUT SURELY 😅</strong>
         </div>
       </div>
