--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
       <br>
       <div class="space-y-5 text-gray-700 text-sm sm:text-xl leading-relaxed ">
         <p>
-          Hi, I’m Shafi from Kerala! I hold a postgraduate degree in Political Science, where I learned to analyze systems, understand human behavior, and think critically about complex problems. Over time, this curiosity naturally extended into technology and the IT field, where problem-solving and structured thinking play a similar role.
+          Hi, I’m Shafi from Kerala! I hold a postgraduate degree in Political Science, where I learned to analyze systems, understand human behavior, and think critically about complex problems.
         </p>
         <p>
-          I hold a postgraduate degree in Political Science, and I channel that analytical mindset into software development—debugging, designing, and building solutions that make a real impact. My transition into tech has been fueled by countless late-night tutorials, cups of chai, and an endless urge to create something meaningful.
+          These skills trained me to look at challenges from multiple angles, find patterns, and develop clear solutions even in complex situations. Over time, this curiosity naturally extended into technology and the IT field, where problem-solving and structured thinking play a similar role.
+          My transition into tech has been fueled by countless late-night tutorials, cups of chai, and an endless urge to create something meaningful.
         </p>
         <div class= min-h-[180px] sm:min-h-[34px]">
           <img src="" alt="">
